Preparing for functional tests